--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="row my-4 justify-content-center">
+            <h1>Trombinoscope</h1>
+        </div>
+    </div>
 </body>
 
 </html>
