création de la barre de navigation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
         <div class="row my-4 justify-content-center">
             <h1>Trombinoscope</h1>
         </div>
+        <div class="row">
+            <div class="col-12">
+                <ul class="nav nav-tabs justify-content-center text-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Ressources Humaines</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link justify-content-center" href="#">Développement</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Finances</a>
+                    </li>
+
+                </ul>
+            </div>
+
+        </div>
     </div>
 </body>
 
