mise en page du fichier index.html

--- a/index.html
+++ b/index.html
@@ -26,16 +26,51 @@
                         <a class="nav-link active" href="#">Ressources Humaines</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link justify-content-center" href="#">Développement</a>
+                        <a class="nav-link justify-content-center" href="developpement.html">Développement</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Finances</a>
+                        <a class="nav-link" href="finances.html">Finances</a>
                     </li>
 
                 </ul>
             </div>
 
         </div>
+        <div class="row">
+            <div class="card mt-3 col-lg-3 col-md-4 col-sm-6 offset-sm-0 offset-1 col-10" style="width: 18rem;">
+                <img class="card-img-top mt-3" src="assets/m1.png" class="card-img-top">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Pierre Leclercq</h5>
+                    <p class="card-text"><small class="text-muted">Arrivé le 07/02/2011</small></p>
+                </div>
+            </div>
+
+            <div class="card mt-3 col-lg-3 col-md-4 col-sm-6 offset-sm-0 offset-1 col-10" style="width: 18rem;">
+                <img class="card-img-top mt-3" src="assets/f2.png" class="card-img-top">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Justine Fabvre</h5>
+                    <p class="card-text"><small class="text-muted">Arrivé le 11/06/2012</small></p>
+                </div>
+            </div>
+
+            <div class="card mt-3 col-lg-3 col-md-4 col-sm-6 offset-sm-0 offset-1 col-10" style="width: 18rem;">
+                <img class="card-img-top mt-3" src="assets/f1.png" class="card-img-top">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Marine Lavoie</h5>
+                    <p class="card-text"><small class="text-muted">Arrivé le 05/12/2016</small></p>
+                </div>
+            </div>
+
+            <div class="card mt-3 col-lg-3 col-md-4 col-sm-6 offset-sm-0 offset-1 col-10" style="width: 18rem;">
+                <img class="card-img-top mt-3" src="assets/m2.png" class="card-img-top">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Fanny Chapin</h5>
+                    <p class="card-text"><small class="text-muted">Arrivé le 02/05/2017</small></p>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 </body>
 
